[package]
name = "withd"
authors = ["Gavin Panella <gavin@allenap.me>"]
description = "Run a command in another directory."
license-file = "LICENSE"
repository = "https://github.com/allenap/withd"
readme = "README.md"
keywords = ["cd", "cdpath"]
categories = ["command-line-utilities"]
version = "0.3.2"
edition = "2021"

[[bin]]
name = "withd"
doc = false

[[bin]]
name = "completions"
path = "src/completions.rs"
doc = false

[dependencies]
clap_complete = "=4.5.40"
tempfile = "=3.16.0"
thiserror = "=2.0.9"

[dependencies.bstr]
version = "=1.11.1"
features = ["std"]
default-features = false

[dependencies.clap]
version = "=4.5.23"
features = ["derive", "env", "wrap_help"]

[dependencies.lazy-regex]
version = "=3.3.0"
features = ["regex"]
default-features = false

[target.'cfg(unix)'.dependencies.nix]
version = "=0.29.0"
features = ["signal"]
default-features = false

[profile.release]
# See https://github.com/johnthagen/min-sized-rust.
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
