[package]
name = "withd"
authors = ["Gavin Panella <gavin@allenap.me>"]
description = "Run a command in another directory."
license-file = "LICENSE"
repository = "https://github.com/allenap/withd"
readme = "README.md"
keywords = ["cd", "cdpath"]
categories = ["command-line-utilities"]
version = "0.3.2"
edition = "2024"

[[bin]]
name = "withd"
doc = false

[[bin]]
name = "completions"
path = "src/completions.rs"
doc = false

[dependencies]
clap_complete = "=4.6.1"
tempfile = "=3.27.0"
thiserror = "=2.0.18"

[dependencies.bstr]
version = "=1.12.1"
features = ["std"]
default-features = false

[dependencies.clap]
version = "=4.6.0"
features = ["derive", "env", "wrap_help"]

[dependencies.lazy-regex]
version = "=3.6.0"
features = ["regex"]
default-features = false

[target.'cfg(unix)'.dependencies.nix]
version = "=0.31.2"
features = ["signal"]
default-features = false

[profile.release]
# See https://github.com/johnthagen/min-sized-rust.
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
